# mcp_server

./: .gitignore  CMakeLists.txt  README.md  StreamableHTTP技术实现文档.md  StreamableHTTP测试文档.md  test_streamable.sh  插件系统技术总结.md  热插拔技术文档.md
Docs/: 架构文档.md
plugins/weather/: CMakeLists.txt  Weather.cpp
src/: main.cpp
src/interface/: ITransport.h
src/loader/: PluginsLoader.cpp  PluginsLoader.h
src/server/: Server.cpp  Server.h
src/transport/: HttpStreamTransport.cpp  HttpStreamTransport.hpp  SseTransport.cpp  SseTransport.h  StdioTransport.cpp  StdioTransport.h  StreamableTransport.cpp  StreamableTransport.h
src/utils/: MCPBuilder.h  TSingleton.h
